fixed size, alignment, and radius

--- a/style.css
+++ b/style.css
@@ -1,55 +1,59 @@
-@import url("https://fonts.googleapis.com/css?family=Outfit");
+@import "https://fonts.googleapis.com/css?family=Outfit";
+
+* {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
 
 :root {
-    background-color: hsl(212, 45%, 89%);
+  background-color: hsl(212, 45%, 89%);
+  font-family: "Outfit";
+  font-size: 15px;
 }
 
 body {
-    font-family: 'Outfit', regular;
-    display: flex;
-    min-height: 100vh;
-    align-items: center;
-    font-size: 15px;
+  display: grid;
+  place-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.card {
-    top: 10px;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
-    position: fixed;
-    margin: auto;
-    padding: 16px;
-    align-content: center;
-    background-color: white;
-    border-radius: 30px;
-    height: 450px;
-    max-width: 300px;
+#card {
+  align-content: center;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 20px;
+  padding: 16px 16px 40px 16px;
 }
 
-.card-title {
-    font-weight: 700;
-    padding-left: 16px;
-    padding-right: 16px;
-    text-align: center;
-    font-size: 20px;
+#textbox {
+  margin-top: 24px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
-.card-text {
-    font-weight: 400;
-    color: hsl(220, 15%, 55%);
-    text-align: center;
-    font-size: 15px;
-}
-
-.card-image img {
-    display: block;
-    margin: auto;
+#space {
+  height: 16px;
 }
 
 img {
-    display: flex;
-    height: 50%;
-    width: 100%;
-    border-radius: 10px;
+  width: 288px;
+  height: 288px;
+  border-radius: 10px;
+}
+
+#card-title {
+  font-size: 22px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 120%;
+  color: hsl(218, 44%, 22%);
+}
+
+#card-text {
+  font-size: 15px;
+  font-weight: 400;
+  text-align: center;
+  line-height: 140%;
+  color: hsl(216, 15%, 48%);
 }
